--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "monorepo-example-react01",
   "private": true,
+  "workspaces": ["packages/*"],
   "version": "1.0.0",
   "description": "An basic example of a monorepo for a react app",
   "main": "index.js",
